styles.css
* {
    box-sizing: border-box;
}
 

body {
    background-image: linear-gradient(to bottom right,rgba(178, 172, 172, 0.459),rgb(27, 29, 30));
    margin:0;
    padding:0;
    background-size:cover;
    background-attachment: fixed;

}

/* ELEMENTS BEFORE <FORM> */
 
header {
    box-sizing: border-box;
    overflow: hidden;
    border:1px solid black;
    
}

h1 {
    padding:20px;
    width:100%;
    margin-top:0;
    text-align: center;
}
h2:first-of-type {
    color:black;
    margin-top:40px;
     width:200px;
     left:50px;
    text-decoration: underline;
    position:sticky;
     top:50px;
  }
 h2:last-of-type {
     width:90%;
      text-align:center;
     text-decoration: overline;

 }
/* END */


/* FORM ELEMENTS */

form#employeeForm {
    width: 25%;
    float:left;
    margin-top:20px;
    padding-left:50px;
    line-height: 80%;
    position:sticky;
    top:100px;
  }
input {
    width:200px;
    font-size: 20px;;
}
form input#fName {
 }
form input#lName {
 }
form input#ID {
 }
form input#Title {
 }
form input#Salary {
 }
form button#addData {
 }
 label {
     
   width: 100px;
  display: inline-block;
 }
/* END  */

/* TABLE ELEMENTS */
table,th,td{
    border: 1px solid black;
    border-collapse: collapse;
    height:auto;
}

h2:last-of-type {
     
 }
table#theTable {
    width:65%;
    margin-right:80px;
     text-align:center;
     margin-bottom:300px;
    overflow: scroll;
    

}
tr#tableRowTH{
}
th {
    padding:15px;
    width:100px;
}
tr#tableRowTD {

}
td {
    padding:5px;

}
#lastTH {
    background-color: rgba(50,50,50,.3)
}

/*  END */
/* Anything footer and below */
footer#footer {
    border:1px solid red;
    clear: both;
    position:fixed;
    width:100%;
    bottom:0;
    background-color: black;
    color:white;
}
#h3Footer {
    margin:20px;
}
.tooMuch {
    background-color: red;
}

